--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "babel-jest": "^26.6.3",
-    "class-validator": "0.11.1",
+    "class-validator": "^0.14.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-import": "^2.29.1",
@@ -82,11 +82,11 @@
     "typescript": "^5.4.4"
   },
   "peerDependencies": {
+    "@mikro-orm/core": "^6.0.0",
     "class-validator": "0.11.1",
     "graphql": "^15.5.0",
     "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.0",
-    "@mikro-orm/core": "^6.0.0"
+    "typeorm": "^0.2.0"
   },
   "dependencies": {
     "@types/faker": "^4.1.10",
