--- a/package.json
+++ b/package.json
@@ -89,10 +89,9 @@
     "typeorm": "^0.2.0"
   },
   "dependencies": {
-    "@types/faker": "^4.1.10",
+    "@faker-js/faker": "^8.4.1",
     "@types/treeify": "^1.0.0",
     "chalk": "^3.0.0",
-    "faker": "^4.1.0",
     "tinspector": "^2.3.1",
     "treeify": "^1.1.0"
   },
